ArgoTrajectoryFile:
Properly handle the TECHNICAL_PARAMETER_MODE and JULD_MODE variables in
the trajectory v3.2 files (while still handling the pre-v3.2 files).

argo-trajectory-spec-v3.2.cdl:

Allow the new format for the Users Manual format string

others:

Miscellaneous clean-up